
Yay.  The build goop is pretty much done now.
----------------------------------------------------------------------
Fri Jul 27 14:28:55 2001                        Michael Jennings (mej)

Let's see how this one fares....
----------------------------------------------------------------------
Fri Jul 27 15:25:40 2001                        Michael Jennings (mej)

It helps if you change *all* the occurances of a filename, not just
one.
----------------------------------------------------------------------
Mon Jul 30 20:35:42 2001                        Michael Jennings (mej)

Now we're cooking....
----------------------------------------------------------------------
Tue Jul 31 15:24:50 2001                        Michael Jennings (mej)

If zaxxon would behave itself, we'd be doing a lot better.
----------------------------------------------------------------------
Tue Jul 31 20:30:08 2001                        Michael Jennings (mej)

Looks like builds are working now, and I've converted the parallel
stuff.  We'll see how that goes tomorrow.
----------------------------------------------------------------------
Thu Aug  2 12:47:16 2001                        Michael Jennings (mej)

Now working a few small kinks out of the parallel build.
----------------------------------------------------------------------
Thu Aug  2 20:09:57 2001                        Michael Jennings (mej)

Not only are parallel builds now working, but it can once again
rebuild our entire 7.1.1 distro.  Woo-ha!
----------------------------------------------------------------------
Thu Aug  9 21:03:34 2001                        Michael Jennings (mej)

revtool rewrite along with the new revision control module.
----------------------------------------------------------------------
Thu Aug  9 23:02:59 2001                        Michael Jennings (mej)

Haha!  "avbuild" works again! :)
----------------------------------------------------------------------