@@ -1,1 +1,0 @@
-*tool&pkgsort&mod&README&ChangeLog&doc&*.spec:avalon.tar.gz
